REG-13 create endpoint button

--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/_component_editable_option.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/_component_editable_option.sass
@@ -6,7 +6,7 @@ i[data-tribe-editable-option]
   $radius: 3px
   font-style: normal
   span.empty
-    font-style: italic
+    font-style: italic !important
     font-size: 12px
     color: #d9d4d7 !important
     font-weight: 600 !important
