--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/app_endpoints_details_response_request.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/app_endpoints_details_response_request.jade
@@ -49,12 +49,5 @@ div
             div(x-ng-click="removeErrorCode(val);")
               i.fa.fa-trash-o
   .samples
-    h2 #[span Request Headers]
-    div(data-tribe-editable-block, data-content="endpoint.samples.requestHeaders")
-    h2 #[span Response Parameters]
-    div(data-tribe-editable-block, data-content="endpoint.samples.responseParameters")
-
     h2 #[span Response Body]
-    div(data-tribe-editable-block, data-content="endpoint.samples.sampleXmlResponse")
-    h2 #[span Response Body Sample Error]
-    div(data-tribe-editable-block, data-content="endpoint.samples.defaultSampleXmlResponse")
+    div(data-tribe-editable-md, data-content="endpoint.samples.responseBody")
