REG-39 hiding pencil and adding border to the fields on edit mode.

--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/_component_editable.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/_component_editable.sass
@@ -68,7 +68,11 @@ i[data-tribe-editable-text], i[data-tribe-editable-number]
     > div
       > div
         display: flex
-
+  &.edit
+    > div
+      border-color: #f2f0f0
+      > div
+        display: none
 i[data-tribe-editable-text], i[data-tribe-editable-number]
   > div
     padding: 5px
