--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/_component_editable_block.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/_component_editable_block.sass
@@ -29,3 +29,9 @@ i[data-tribe-editable-block]
         border-color: #f2f0f0
       .icon
         display: block
+  &.edit
+    > div
+      .CodeMirror
+        border-color: #f2f0f0
+      .icon
+        display: none
