--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/_component_editable_md.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/_component_editable_md.sass
@@ -55,3 +55,8 @@ div[data-tribe-editable-md]
       border-color: #f2f0f0
     .icon
       display: block
+  &.edit
+    > div
+      border-color: #f2f0f0
+    .icon
+      display: none
