--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/_app_endpoints_details_response_request.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/_app_endpoints_details_response_request.sass
@@ -66,7 +66,7 @@ div[data-app-endpoints-details-response-request]
             background-color: #404142
       td
         padding: 5px 0 0 0
-
+      @include table-row-highlight($table-hover-color)
       tr:hover
         td:last-of-type
           > div
