--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/_app_endpoints_details_response_request.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/_app_endpoints_details_response_request.sass
@@ -72,5 +72,13 @@ div[data-app-endpoints-details-response-request]
           > div
             display: flex
             margin: 0 5px
+    div.expected
+      td, th
+        &:first-of-type
+          width: 200px
+    div.values
+      td, th
+        &:nth-of-type(1), &:nth-of-type(2)
+          width: 130px
     div.samples > h2
       margin-top: $section-margin-bottom
