--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/app_endpoints_details_response_request.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/app_endpoints_details_response_request.jade
@@ -16,9 +16,9 @@ div
       tbody
         tr(x-ng-repeat="val in endpoint.expectedValues")
           td
-            i(data-tribe-editable-text, data-adjust="false", data-value="val.name")
+            i(data-tribe-editable-text, data-empty-text="not set", data-adjust="false", data-value="val.name")
           td
-            i(data-tribe-editable-block, data-content="val.values")
+            i(data-tribe-editable-block, data-empty-text="not set", data-content="val.values")
           td
             div(x-ng-click="removeExpectedValue(val);")
               i.fa.fa-trash-o
