--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/_component_editable_block.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/_component_editable_block.sass
@@ -1,6 +1,6 @@
 @import "variables"
 
-i[data-tribe-editable-block]
+i[data-tribe-editable-block], div[data-tribe-editable-block]
   font-style: normal
   > div
     position: relative
