--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/app_endpoints_details_resource_information.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/app_endpoints_details_resource_information.jade
@@ -35,12 +35,11 @@ div
       div(x-ng-click="addRate()", tabindex=0)
         i.fa.fa-plus
     .rates(x-ng-repeat="rl in endpoint.rates")
-      i(data-tribe-editable-number, data-value="rl.rateLimit")
+      i(data-tribe-editable-number, data-adjust="false", data-value="rl.rateLimit")
       span requests /
-      i(data-tribe-editable-number, data-value="rl.rateWindow")
+      i(data-tribe-editable-number, data-adjust="false", data-value="rl.rateWindow")
       i(data-tribe-editable-option, data-value="rl.rateUnit", data-options="rateUnits")
-      div
-        span Description
-        i(data-tribe-editable-text, data-value="rl.description")
+      span Description
+      i(data-tribe-editable-text, data-adjust="false", data-value="rl.description")
       div(x-ng-click="removeRate(rl)")
         i.fa.fa-trash
