REG-108 auto focus new links

--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/app_endpoints_details_see.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/app_endpoints_details_see.jade
@@ -1,7 +1,7 @@
 div
   div
     span See also
-    div(x-ng-click="addLink();")
+    div.add-link
       i.fa.fa-plus
   ul
     li(x-ng-repeat="see in endpoint.metadata.sees | orderBy:['seeOrder', 'title']")
