--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/app_endpoints_details_response_request.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/app_endpoints_details_response_request.jade
@@ -25,7 +25,7 @@ div
     h2 Response codes
       div(x-ng-click="addErrorCode();", app-endpoints-details-toc-anchor="Response codes")
         i.fa.fa-plus
-    table(x-ng-if="endpoint.errors && endpoint.errors.length")
+    table(x-ng-if="endpoint.operation['x-tribestream-api-registry'] && endpoint.operation['x-tribestream-api-registry']['response-codes'] && endpoint.operation['x-tribestream-api-registry']['response-codes'].length")
       thead
         tr
           th HTTP Status
@@ -34,11 +34,11 @@ div
           th Description
           th
       tbody
-        tr(x-ng-repeat="val in endpoint.errors | orderBy:'statusCode'")
+        tr(x-ng-repeat="val in endpoint.operation['x-tribestream-api-registry']['response-codes'] | orderBy:'http_status'")
           td
-            i(data-tribe-editable-number, data-adjust="false", data-value="val.statusCode")
+            i(data-tribe-editable-number, data-adjust="false", data-value="val.http_status")
           td
-            i(data-tribe-editable-text, data-adjust="false", data-value="val.errorCode")
+            i(data-tribe-editable-text, data-adjust="false", data-value="val.error_code")
           td
             i(data-tribe-editable-block, data-content="val.message")
           td
