--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/app_endpoints_list_application.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/app_endpoints_list_application.jade
@@ -1,10 +1,10 @@
 div
   h2
-    a(x-ng-href="application/{{application.name}}") {{application.name}}
+    a(x-ng-href="application/{{application.applicationId}}") {{application.name}} {{application.version}}
     span ({{application.endpoints.length}})
   div(x-ng-repeat="endpoint in endpoints")
     i.fa(x-ng-class="{'fa-lock': endpoint.secured, 'fa-unlock': !endpoint.secured}")
-    a(x-ng-href="endpoint/{{endpoint.application}}/{{endpoint.httpMethod}}{{endpoint.path}}") {{endpoint.httpMethod}} {{endpoint.path}}
+    a(x-ng-href="endpoint/{{endpoint.applicationId}}/{{endpoint.httpMethod}}{{endpoint.path | pathencode}}") {{endpoint.httpMethod}} {{endpoint.path| pathencode}}
     span {{endpoint.description | tribeHtmlText}}
   div(x-ng-if="showAll")
     span(x-ng-click="showAllEndpoints();") Show more {{application.endpoints.length - pageSize}} endpoints
