--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/app_endpoints_details.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/app_endpoints_details.jade
@@ -11,8 +11,8 @@ div
     div
       div(data-app-endpoints-details-toc).collapsed
       article.app-ep-details-body
-        div(data-app-endpoints-details-header, data-method="method", data-path="path", data-endpoint="endpoint")
-        div(data-app-endpoints-details-resource-information, data-endpoint="endpoint")
-        div(data-app-endpoints-details-parameters, data-endpoint="endpoint")
-        div(data-app-endpoints-details-response-request, data-endpoint="endpoint")
+        div(data-app-endpoints-details-header)
+        div(data-app-endpoints-details-resource-information)
+        div(data-app-endpoints-details-parameters)
+        div(data-app-endpoints-details-response-request)
     div(data-app-footer)
