--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/app_endpoints_details_response_request.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/app_endpoints_details_response_request.jade
@@ -36,7 +36,7 @@ div
       tbody
         tr(x-ng-repeat="val in endpoint.operation['x-tribestream-api-registry']['response-codes'] | orderBy:'http_status'")
           td
-            i(data-tribe-editable-number, data-adjust="false", data-value="val.http_status")
+            i(data-tribe-editable-text, data-adjust="false", data-value="val.http_status")
           td
             i(data-tribe-editable-text, data-adjust="false", data-value="val.error_code")
           td
@@ -53,6 +53,6 @@ div
     h3 Response Parameters
     div(data-tribe-editable-block, data-content="endpoint.samples.responseParameters")
     h3 Response Body
-    div(data-tribe-editable-block, data-content="endpoint.samples.responseBody")
+    div(data-tribe-editable-block, data-content="exampleResponseXml")
     h3 Response Body Error
-    div(data-tribe-editable-block, data-content="endpoint.samples.responseBodyError")
+    div(data-tribe-editable-block, data-content="errorResponseXml")
