--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/app_header.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/app_header.jade
@@ -2,7 +2,7 @@ header
   a(href=".")
     img(src="app/images/header_iii.png", title="Registry")
   div
-    span Repogistry
+    span Registry
   div
     span(app-logged-in) {{user}}
     i(app-logout).fa.fa-sign-out
