Use the Markdown component for Application and Endpoint description.

--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/app_application_details.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/app_application_details.jade
@@ -9,7 +9,7 @@ div
       div
         h1
           i(data-tribe-editable-text, data-value="swagger.info.title")
-        i(data-tribe-editable-block, data-content="swagger.info.description")
+        div(data-tribe-editable-md, data-content="swagger.info.description")
         .see(x-ng-if="details.sees.length")
           span See:
           div
