--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/app_endpoints_details_header.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/app_endpoints_details_header.jade
@@ -6,7 +6,7 @@ div
   h2 Summary
   i(data-tribe-editable-block, data-empty-text="No description", data-content="endpoint.operation.summary")
   h2 Description
-  i(data-tribe-editable-block, data-empty-text="No description", data-content="endpoint.operation.description")
+  div(data-tribe-editable-md, data-empty-text="No description", data-content="endpoint.operation.description")
   div(data-app-endpoints-details-see, data-endpoint="endpoint")
   .resourceUrl(x-ng-if="resourceUrl")
     h2(app-endpoints-details-toc-anchor="Resource URL") Resource URL
