--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/_app_endpoints_details_parameters.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/_app_endpoints_details_parameters.sass
@@ -1,5 +1,6 @@
 @import "variables"
 @import "app_endpoints_details_common"
+@import "common_table"
 
 div[data-app-endpoints-details-parameters]
   $border-color: #e9e9e9
@@ -13,9 +14,9 @@ div[data-app-endpoints-details-parameters]
       display: flex
       align-items: center
       > span
-        font-size: 22px
+        font-size: $app-font-size-h2
         color: $text-color
-        font-weight: 700 !important
+        font-weight: $app-font-weight-h2 !important
         text-transform: uppercase
       > div.add-param
         background-color: #d6d6d6
@@ -27,22 +28,10 @@ div[data-app-endpoints-details-parameters]
       $limit-table-threshold: 1000px
       > div
         overflow: auto
+        @include common-table()
         > table
-          table-layout: fixed
-          width: 100%
           @media (max-width: $limit-table-threshold)
             min-width: 800px
-          > thead
-            background-color: #f9f9f9
-            th
-              text-align: left
-              background-color: #f8f9fa
-              color: #000000
-              padding: 5px
-              text-transform: uppercase
-              font-size: 15px
-              font-weight: 600 !important
-
           th, td
             $column-width: 120px
             width: $column-width
@@ -74,8 +63,6 @@ div[data-app-endpoints-details-parameters]
               > div
                 display: flex
                 flex-direction: column
-          td
-            padding: 5px 0 0 0
           td
             > i
               > div
