--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/_app_endpoints_details.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/_app_endpoints_details.sass
@@ -69,7 +69,7 @@ div[data-app-endpoints-details]
           flex-grow: 1
           background-color: $app-white
           min-width: 500px
-          padding: 0 10px 0 20px
+          padding: 0 40px
 
 @import "app_endpoints_details_header"
 @import "app_endpoints_details_toc"
