--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/_common_table.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/_common_table.sass
@@ -18,6 +18,9 @@
       border: solid darken($color, 4) 1px
       border-left: 0
       border-right : 0
-    th, td
-      &:first-of-type
-        padding: 15px 5px 15px 10px
+    th:first-of-type
+      padding: 15px 5px 15px 10px
+    td:first-of-type
+      padding-left: 10px
+    td
+      padding-top: 5px
