Fix HTML structure of endpoint overview on application details page

--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/app_application_details.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/app_application_details.jade
@@ -25,10 +25,10 @@ div
               td
                 table
                   thead
-                    th
-                      td Verb
-                      td Path
-                      td Summary
+                    tr
+                      th Verb
+                      th Path
+                      th Summary
                   tbody
                     tr(x-ng-repeat="endpoint in endpoints")
                       td
