--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/page_endpoints_details.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/page_endpoints_details.jade
@@ -1,2 +1,2 @@
 div(data-app)
-  div(data-app-endpoints-details, data-application-id="app", data-method="method", data-path="path")
+  div(data-app-endpoints-details, data-application-id="applicationId", data-endpoint-id="endpointId")
