REG-121 First iteration - refactoring component

--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/app.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/app.sass
@@ -69,6 +69,7 @@ a
 @import "component_switch"
 @import "component_multiselect"
 @import "component_tabs"
+@import "component_field_actions"
 
 @import "app_header"
 @import "app_footer"
@@ -90,3 +91,4 @@ a
 @import "_app_endpoints_selected_filter"
 
 @import "page_login"
+@import "page_components"
