--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/_component_multiselect.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/_component_multiselect.sass
@@ -2,48 +2,71 @@
 
 div[data-tribe-multiselect-selected]
   border: 0
-  padding: 2px 2px 0 2px
   > div
     display: flex
-    flex-wrap: wrap
     align-items: center
-    > div.text
-      flex-grow: 1
-      border: solid transparent 2px
-      padding: 2px 5px 2px 0
-      margin: 0 2px 2px 0
-      > input
-        margin: 0
-        width: 1px
-        border-width: 0
-        padding: 0
-        height: auto !important
-        &:focus
-          min-width: 10px
-          width: 100%
-    > div.items
-      display: inline-block
-      border: solid #cccccc 1px
-      border-radius: 3px
+    > div.edit-icon
+      opacity: 0
+      display: flex
+      flex-direction: column
+      justify-content: center
+      align-items: center
+      padding: 0 5px
+      border: 0
+      border-left: solid $app-input-border-color 1px
       background-color: #f5f5f5
-      padding: 2px 5px
-      margin: 0 2px 2px 0
-      > div
-        > span
-          margin-right: 5px
-        > i
-          color: #707070
-      &.selected
-        background-color: $tomitribe-orange
+      align-self: stretch
+
+
+    > div:first-of-type
+      padding: 2px 2px 0 2px
+      display: flex
+      flex-wrap: wrap
+      align-items: center
+      flex-grow: 1
+      > div.text
+        flex-grow: 1
+        border: solid transparent 2px
+        padding: 2px 5px 2px 0
+        margin: 0 2px 2px 0
+        > input
+          margin: 0
+          width: 1px
+          border-width: 0
+          padding: 0
+          height: auto !important
+          &:focus
+            min-width: 10px
+            width: 100%
+      > div.items
+        display: inline-block
+        border: solid #cccccc 1px
+        border-radius: 3px
+        background-color: #f5f5f5
+        padding: 2px 5px
+        margin: 0 2px 2px 0
         > div
-          > span, > i
-            color: #ffffff
+          > span
+            margin-right: 5px
+          > i
+            color: #707070
+        &.selected
+          background-color: $tomitribe-orange
+          > div
+            > span, > i
+              color: #ffffff
 
 [data-tribe-multiselect]
   display: inline-block
   border: solid transparent 1px
   &.active
     display: block
+  &:hover
+    div.edit-icon
+      opacity: 1
+  &.active
+    div.edit-icon
+      opacity: 0
   &:hover, &.active
     border-color: $app-input-border-color
 
