--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/component_multiselect_available.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/component_multiselect_available.jade
@@ -1,5 +1,9 @@
 .tribe-data-tribe-multiselect-available-body.floating-menu
-  .option(x-ng-repeat="opt in availableOptions",
-      x-ng-click="selectItem(opt)"
-      x-ng-class="{selected: opt === selectedItem}")
-    span {{opt}}
+    div
+        .option(x-ng-repeat="opt in availableOptions",
+                x-ng-click="selectItem(opt)"
+                x-ng-class="{selected: opt === selectedItem}")
+            span {{opt}}
+    div(x-ng-if="!selectedItem")
+        span New:
+        span {{inputText}}
