--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/app_endpoints_details_parameters.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/app_endpoints_details_parameters.jade
@@ -30,7 +30,7 @@ div
                 i(data-tribe-editable-block, data-content="param.description")
             td.valid-values
               div
-                i(data-tribe-multiselect, data-selected-options="param.sampleValues")
+                div(data-tribe-multiselect, data-selected-options="param.sampleValues", data-available-options="[]")
             td
               div
                 i.fa.fa-trash-o(x-ng-click="removeParam(param);")
