Added save button to endpoint details page

--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/app_endpoints_details.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/app_endpoints_details.jade
@@ -14,4 +14,6 @@ div
         div(data-app-endpoints-details-resource-information)
         div(data-app-endpoints-details-parameters)
         div(data-app-endpoints-details-response-request)
+        div
+          button.orange(x-ng-click="save()") Save
     div(data-app-footer)
