REG-121 testing component - new label

--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/component_multiselect.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/component_multiselect.jade
@@ -14,7 +14,8 @@ div(tabindex=0)
         data-active-bottom-up="optionsActivatedBottomUp",
         data-selected-options="selectedOptions",
         data-available-options="availableOptions",
-        data-input-text="inputText"
+        data-input-text="inputText",
+        data-new-label="{{newLabel}}"
     )
     div(data-tribe-field-actions,
         data-version="version",
