--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/component_multiselect_available.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/component_multiselect_available.jade
@@ -5,5 +5,6 @@
                 x-ng-class="{selected: opt === selectedItem}")
             span {{opt}}
     div(x-ng-if="!selectedItem")
-        span New:
+        span(x-ng-if="newLabel") {{newLabel}}:
+        span(x-ng-if="!newLabel") New:
         span {{inputText}}
