--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/page_components.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/page_components.jade
@@ -2,3 +2,8 @@
     div(data-tribe-multiselect,
         data-selected-options="['aaa', 'bbb', 'ccc', 'ddd', 'eee']",
         data-available-options="['aaa', 'bbb', 'ccc', 'ddd', 'eee', 'eeeee', 'fff', 'ggg', 'hhh']")
+
+    div(data-tribe-multiselect,
+        data-new-label="New Item",
+        data-selected-options="['aaa', 'bbb', 'ccc', 'ddd', 'eee']",
+        data-available-options="['aaa', 'bbb', 'ccc', 'ddd', 'eee', 'eeeee', 'fff', 'ggg', 'hhh']")
