REG-121 sorting items prior to auto select

--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/component_multiselect_available.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/component_multiselect_available.jade
@@ -1,6 +1,6 @@
 .tribe-data-tribe-multiselect-available-body.floating-menu
     div
-        .option(x-ng-repeat="opt in availableOptions",
+        .option(x-ng-repeat="opt in availableOptions | orderBy",
                 x-ng-click="selectItem(opt)"
                 x-ng-class="{selected: opt === selectedItem}")
             span {{opt}}
