--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/component_multiselect_selected.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/component_multiselect_selected.jade
@@ -1,6 +1,6 @@
 div
   div
-    .items(x-ng-repeat="opt in selectedOptions", ng-class="{selected: opt === selectedItem}")
+    .items(x-ng-repeat="opt in selectedOptions | orderBy", ng-class="{selected: opt === selectedItem}")
       div
         span.opt {{opt}}
         i.fa.fa-times.remove(x-ng-click="releaseItem(opt)")
