--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/page_components.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/page_components.jade
@@ -1,11 +1,11 @@
 .components
     div
         div(data-tribe-multiselect,
-            data-selected-options="['aaa', 'bbb', 'ccc', 'ddd', 'eee']",
-            data-available-options="['aaa', 'bbb', 'ccc', 'ddd', 'eee', 'eeeee', 'fff', 'ggg', 'hhh']")
+            data-selected-options="['bbb', 'ccc', 'aaa', 'eee', 'ddd']",
+            data-available-options="['ddd', 'aaa', 'bbb', 'ccc', 'eee', 'fff', 'eeeee', 'ggg', 'hhh']")
 
     div
         div(data-tribe-multiselect,
             data-new-label="New Item",
-            data-selected-options="['aaa', 'bbb', 'ccc', 'ddd', 'eee']",
+            data-selected-options="['eee', 'bbb', 'aaa', 'ccc', 'ddd']",
             data-available-options="['aaa', 'bbb', 'ccc', 'ddd', 'eee', 'eeeee', 'fff', 'ggg', 'hhh']")
